objects/Energy_Control__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Callout_Start_Date__c</fullName>
        <label>Callout Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disable_Integrations__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If this flag is set to true on the default record (there should only be one record on this object) then NOT send the Pricing or Create Quote integrations.  Just &apos;return&apos; instead of sending the Rest message.</description>
        <label>Disable Integrations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Limit_User__c</fullName>
        <label>Limit User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Energy Control</label>
</CustomObject>